# peterdohertys.website

./: .gitignore  .tmuxinator.yml  CNAME  LICENSE  README.md  a  about-me.html  about-me.markdown  blog-posts.html  case-studies.html  contact.html  contact.markdown  demos.html  deploy.hi  deploy.hs  index.html  makea.hs  peterdohertys-website.cabal  site.hs  stack.yaml
blog-posts/: glancing-at-python-through-ruby-tinted-glasses.html  glancing-at-python-through-ruby-tinted-glasses.markdown  vim-abbreviations-the-lightning-talk-that-didnt-strike.html  vim-abbreviations.html
case-studies/: emoji-is-life.html  emoji-is-life.markdown  star-wars-red-carpet-sound-off.html  star-wars-red-carpet-sound-off.markdown
css/: default.css  default.sass  normalize.css  star-wars-case-study.css
demos/: decaying-class-name.html  decaying-class-name.markdown  remote-authentication.html  remote-authentication.markdown  spa-routing.html  spa-routing.markdown
links/: behance.markdown  email.markdown  github.markdown  linkedin.markdown  meetup.markdown  stack-overflow.markdown  twitter.markdown  working-not-working.markdown
templates/: analytics.html  archive.html  blog-post-list.html  blog-post.html  case-study-list.html  default.html  demo-list.html  link-list.html
